# argparsh

./: .gitignore  Cargo.toml  README  README.md  example.sh  pyproject.toml  test.sh
.github/workflows/: test.yml
argparsh/: __main__.py  add_arg.py  main.py  new.py  parse.py  set_defaults.py  subparser.py  utils.py
examples/: example.sh  fishexample.fish  inafunction.sh  stopwatch.sh  subsubparsers.sh
rust/argparsh/: Cargo.toml  test.sh
rust/argparsh/src/: main.rs
rust/argparsh/src/py/: utils.py
src/: main.rs
src/py/: utils.py
test/: test_argparsh.py
