[package]
name = "argparsh"
version = "0.1.2"
edition = "2021"
authors = ["Aneesh Durg <aneeshdurg17@gmail.com>"]
license = "MIT"
homepage = "https://github.com/aneeshdurg/argparsh"
repository = "https://github.com/aneeshdurg/argparsh"
description = "Better argument parsing for shells via python's argparse"
keywords = [
  "argument",
  "cli",
  "arg",
  "parser",
  "parse"
]
categories = ["command-line-interface"]

[dependencies]
bitcode = "=0.6.3"
clap = { version = "4.5.21", features = ["derive"] }
pyo3 = { version = "0.22.2", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1.3"
